--- a/src/app/shard/covid/covid.component.html
+++ b/src/app/shard/covid/covid.component.html
@@ -4,7 +4,7 @@
  <div class="container">
     <div class="title text-center">
         <h1>The Results</h1>
-        <p> Covid-19 is a work in progress, the Invision demo can be seen. </p>
+        <p> Covid-19 is a work in progress, the Invision demo can be seen </p>
         <button class="effect_button">
             <a href="https://egycovid.info/"> go live here </a>
         </button>
